[project]
name = "A_maze_ing"
version = "1.0.0"
description = "Team project to test out mazes generation, solving and displaying using different algorithms."
authors = [
	{name = "Belladone-Bzz"},
	{name = "jolyne-mangeot"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pydantic (==2.13.4)",
	"mypy (>=2.1.0)"
]
license = "MIT"
license-files = ["LICENCE"]

[project.urls]
Homepage = "https://github.com/Belladone-Bzz/A_maze_ing"
Issues = "https://github.com/Belladone-Bzz/A_maze_ing/issues"
